# http-server

./: CMakeLists.txt  README.md
docs/: architecture.txt  decisions.md  workflow.txt
src/: http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  main.cpp  server.cpp  server.hpp
tests/: test_http_request.cpp  test_http_response.cpp
